; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_aram.c_AR_Init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_aram.c_AR_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__ARInit_Flag = common dso_local global i32 0, align 4
@__ARDmaCallback = common dso_local global i32* null, align 8
@IRQ_DSP_ARAM = common dso_local global i32 0, align 4
@__ARHandler = common dso_local global i32 0, align 4
@__ARStackPointer = common dso_local global i32 0, align 4
@__ARFreeBlocks = common dso_local global i32 0, align 4
@__ARBlockLen = common dso_local global i32* null, align 8
@_dspReg = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AR_Init(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 16384, i32* %7, align 4
  %8 = load i32, i32* @__ARInit_Flag, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* %7, align 4
  store i32 %11, i32* %3, align 4
  br label %39

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @_CPU_ISR_Disable(i32 %13)
  store i32* null, i32** @__ARDmaCallback, align 8
  %15 = load i32, i32* @IRQ_DSP_ARAM, align 4
  %16 = load i32, i32* @__ARHandler, align 4
  %17 = call i32 @IRQ_Request(i32 %15, i32 %16, i32* null)
  %18 = load i32, i32* @IRQ_DSP_ARAM, align 4
  %19 = call i32 @IRQMASK(i32 %18)
  %20 = call i32 @__UnmaskIrq(i32 %19)
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* @__ARStackPointer, align 4
  %22 = load i32, i32* %5, align 4
  store i32 %22, i32* @__ARFreeBlocks, align 4
  %23 = load i32*, i32** %4, align 8
  store i32* %23, i32** @__ARBlockLen, align 8
  %24 = load i32*, i32** @_dspReg, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 13
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, -256
  %28 = load i32*, i32** @_dspReg, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 13
  %30 = load i32, i32* %29, align 4
  %31 = and i32 %30, 255
  %32 = or i32 %27, %31
  %33 = load i32*, i32** @_dspReg, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 13
  store i32 %32, i32* %34, align 4
  %35 = call i32 (...) @__ARCheckSize()
  store i32 1, i32* @__ARInit_Flag, align 4
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @_CPU_ISR_Restore(i32 %36)
  %38 = load i32, i32* @__ARStackPointer, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %12, %10
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @IRQ_Request(i32, i32, i32*) #1

declare dso_local i32 @__UnmaskIrq(i32) #1

declare dso_local i32 @IRQMASK(i32) #1

declare dso_local i32 @__ARCheckSize(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
